packages/quickbooks-core/main/default/objects/Opportunity/fields/QuickBooks_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Invoice_Id__c</fullName>
    <externalId>true</externalId>
    <label>QuickBooks Invoice Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>