packages/quickbooks-core/main/default/objects/Opportunity/fields/QuickBooks_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Invoice_Number__c</fullName>
    <label>QuickBooks Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>