packages/quickbooks-core/main/default/objects/Opportunity/fields/QuickBooks_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Last_Sync__c</fullName>
    <label>QuickBooks Last Sync</label>
    <type>DateTime</type>
</CustomField>